# ffmpeg-audio-player

./: .gitmodules  CMakeLists.txt  README.md
src/: library.cpp  library.h  main.cpp
